crates/swc_fast_ts_strip/tests/errors/ts-module.ts


module Foo {
    export const foo = 1;
}

module Foo { }
declare module Bar { }